[package]
name = "ircservserv"
description = "Manages IRC channel configuration from declarative toml files"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@debian.org>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "validate-config"

[dependencies]
log = "0.4"
env_logger = "0.8"
lazy_static = "1.4"
irc = "0.15.0"
tokio = {version = "1.0", features=["full"]}
anyhow = "1.0"
futures-util = "0.3.15"
regex = "1"
toml = "0.5"
serde = {version = "1.0", features=["derive"]}
git-version = "0.3.4"
